# cppTraining

./: .gitignore  CMakeLists.txt  main.cpp
hdr/: Benz.h  Car.h  Engine.h
src/: Benz.cpp  Car.cpp
test/: ATest.cpp  CMakeLists.txt  CarTest.cpp
test/mock/: EngineMock.hpp
